--- a/examples/index.html
+++ b/examples/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Vue Breadcrumbs example</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script src="https://cdn.jsdelivr.net/vue/1.0.10/vue.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/0.7.13/vue-router.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.24/vue.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/0.7.13/vue-router.js"></script>
     <script src="../dist/vue-breadcrumbs.min.js"></script>
     <style type="text/css">
         nav.breadcrumbs ul {
