Docs on main site

--- a/example/index.html
+++ b/example/index.html
@@ -46,7 +46,7 @@
     <!-- Uncomment to test Vue 1.x -->
     <!--<script src="https://cdn.jsdelivr.net/vue/1.0.10/vue.js"></script>-->
     <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/0.7.13/vue-router.js"></script>-->
-    <script src="./vue-breadcrumbs.min.js"></script>
+    <script src="../dist/vue-breadcrumbs.min.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
